update your profile/message/email/database storage of alumnis

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,16 +9,16 @@
                     <h1>Welcome to ALUMNIS Directory</h1>
                 </center>
                 <center>
-                    <h2> View our alumnis from all over the world! </h2>
+                    <h2> View our alumnis </h2>
                 </center>
                 <p></p>
 
                 <p>
-                    <a class="btn btn-primary btn-large" href="/alumni/new">CREATE ACCOUNT</a>
+                    <a class="btn btn-primary btn-large" href="/alumni/new">UPDATE YOYR PROFILE</a>
                 </p>
 
                 <p>
-                    <a class="btn btn-primary btn-large" href="/alumni/search">Search ALUMNI</a>
+                    <a class="btn btn-primary btn-large" href="/alumni/search">SEARCH ALUMNI</a>
                 </p>
 
             </div>
