--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -4,6 +4,6 @@
 
     <p>Welcome to Alumni Connect</p>
 
-    <a href="/alumni">View all Alumnis</a>
+    <a href="/login">View all Alumnis</a>
 
     <% include partials/footer %>
