--- a/views/new.ejs
+++ b/views/new.ejs
@@ -8,9 +8,9 @@
                     <div class="form-group">
                         <input class="form-control" type="text" name="name" placeholder="name">
                     </div>
-                    <div class="form-group">
+                    <!-- <div class="form-group">
                         <input class="form-control" type="text" name="image" placeholder="image url">
-                    </div>
+                    </div> -->
 
                     <div class="form-group">
                         <input class="form-control" type="text" name="college" placeholder="college">
