--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -1,9 +1,89 @@
-<% include partials/header %>
+<!DOCTYPE html>
+<html>
+<head>
+  <!--Bootstrap-->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <link rel="stylesheet" href="./styles.css">
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+<!--google font-->
+<link href="https://fonts.googleapis.com/css?family=Montserrat|Ubuntu&display=swap" rel="stylesheet">
+</head>
+<body>
 
-    <h1>Find your Alumni Page</h1>
+<!--navbar-->
+<div>
+<nav class="navbar container-fluid navbar-expand-lg bg-dark navbar-dark navbar">
 
-    <p>Welcome to Alumni Connect</p>
+        <img  class="logo" src="./img/National_Institute_of_Technology,_Patna_Logo.png">
+        <a class="navbar-brand bname" href="">The Colleges of Goa</a>
 
-    <a href="/login">View all Alumnis</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-    <% include partials/footer %>
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="">Activities</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="">Events</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="">Vaccancy</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/register">Signup</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/login">Login</a>
+            </li>
+          </ul>
+
+        </div>
+      </nav>
+    </div>
+
+      <!-- carousel-->
+
+      <!-- <div class="container-fluid imgbox">
+        <div class="container">
+
+          <div id="carouselExampleControls" class="carousel slide" data-ride="carousel" data-interval="2500">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+      <img class="carimg" src="./img/download 3.jpg"></img>
+      <h1 class="cardet">"Our main Goal is to Unify all Student and form a platform for excahnge of Ideas and Info. "</h1>
+      </div>
+      <div class="carousel-item">
+      <img class="carimg" src="./img/download 1.jpg"></img>
+      <h1 class="cardet">"Once a Student always a Student. We care even for a Single One"</h1>
+      </div>
+      <div class="carousel-item">
+      <img class="carimg" src="./img/download.jpg"></img>
+      <h1 class="cardet">"A strong DataBase is available with maximum Security and Privacy."</h1>
+      </div>
+    </div>
+
+  </div>
+</div>
+<a class="carousel-control-prev carbtn" href="#carouselExampleControls" role="button" data-slide="prev">
+  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+  <span class="sr-only">Previous</span>
+</a>
+<a class="carousel-control-next carbtn" href="#carouselExampleControls" role="button" data-slide="next">
+  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+  <span class="sr-only">Next</span>
+</a>
+      </div> -->
+
+<!--updates-->
+<div class="container-fluid updates">
+</div>
+
+
+</body>
+</html>
