--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,30 +1,35 @@
 <% include partials/header %>
 
+<% if(currentUser && currentUser.isAdmin) { %>
+<h1> You are Admin !!</h1>
 
-    <div class="container">
+<% } %>
 
-        <header class="jumbotron">
-            <div class="container">
-                <center>
-                    <h1>Welcome to ALUMNIS Directory</h1>
-                </center>
-                <center>
-                    <h2> View our alumnis </h2>
-                </center>
-                <p></p>
+<div class="container">
 
-                <p>
-                    <a class="btn btn-primary btn-large" href="/alumni/new">UPDATE YOYR PROFILE</a>
-                </p>
+    <header class="jumbotron">
+        <div class="container">
+            <center>
+                <h1>Welcome to ALUMNIS Directory</h1>
+            </center>
+            <center>
+                <h2> View our alumnis </h2>
+            </center>
+            <p></p>
 
-                <p>
-                    <a class="btn btn-primary btn-large" href="/alumni/search">SEARCH ALUMNI</a>
-                </p>
 
-            </div>
-        </header>
+            <p>
+                <a class="btn btn-primary btn-large" href="/alumni/new">UPDATE YOYR PROFILE</a>
+            </p>
 
-        <!-- <form action="/search" method="POST">
+            <p>
+                <a class="btn btn-primary btn-large" href="/alumni/search">SEARCH ALUMNI</a>
+            </p>
+
+        </div>
+    </header>
+
+    <!-- <form action="/search" method="POST">
 
             <input type="text" name="name" placeholder="name">
             <input type="text" name="batch" placeholder="batch">
@@ -35,39 +40,40 @@
 
         </form> -->
 
-
-
-
-        <div class="row text-center" style="display:flex; flex-wrap: wrap;">
-            <% alumni.forEach(function(alumni){ %>
-                <div class="col-md-3 col-sm-6">
-                    <div class="thumbnail">
-                        <img src="<%= alumni.image %>">
-                        <div class="caption">
-                            <h4>
-                                <%= alumni.name %>
-                            </h4>
-                        </div>
-                        <p>
-                            <a href="/alumni/<%= alumni._id%>" class="btn btn-primary">More Info</a>
-                        </p>
-                    </div>
+    <div class="row text-center" style="display:flex; flex-wrap: wrap;">
+        <% alumni.forEach(function(alumni){ %>
+        <div class="col-md-3 col-sm-6">
+            <div class="thumbnail">
+                <!-- <img src="<%= alumni.image %>"> -->
+                <img style="padding:8px 30px ; height: 150px; 20px;display: block;" src="<%= alumni.image %>"
+                    alt="Alumni image">
+                <div class="caption">
+                    <h4>
+                        <%= alumni.name %>
+                    </h4>
+                    <h5>
+                        <%= alumni.college %>
+                    </h5>
                 </div>
-                <% }); %>
+                <p>
+                    <a href="/alumni/<%= alumni._id%>" class="btn btn-primary">More Info</a>
+                </p>
+            </div>
         </div>
+        <% }); %>
     </div>
+</div>
 
-    <div id="particles-js">
-
-
-        </br>
-        </br>
-        </br>
-        <div id="abc">
+<div id="particles-js">
 
 
-        </div>
-        <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-        <script src="/js/script.js"></script>
+    </br>
+    </br>
+    </br>
+    <div id="abc">
 
-        <% include partials/footer %>
+    </div>
+    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+    <script src="/js/script.js"></script>
+
+    <% include partials/footer %>
