--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -1,125 +1,153 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-  <style>
-    body {
-      font-family: "Montserrat";
-      text-align: center;
-    }
-
-    h1,
-    h2,
-    h3,
-    h4,
-    h5,
-    h6 {
-      font-family: "Ubuntu";
-    }
-
-    h1,
-    .bname {
-      font-weight: bold;
-    }
-
-    .navbar {
-      position: fixed;
-      z-index: 1;
-    }
-
-    .logo {
-      height: 2.7rem;
-      width: 2.7rem;
-    }
-
-    .bname {
-      padding: 0rem 0rem 0rem 1rem;
-      font-size: 2rem;
-      font-family: "Montserrat";
-    }
-
-    .imgbox {
-      background-color: #cce0ff;
-      position: relative;
-      top: 5rem;
-      text-align: center;
-    }
-
-    .carimg {
-      height: 30rem;
-      width: 45rem;
-      border-radius: 1rem;
-      margin-top: 2rem;
-    }
-
-    @media (max-width:1000px)and (min-width:430px) {
-      .carimg {
-        height: 19rem;
-        width: 19rem;
-      }
-
-      .imgbox {
-        height: 37rem;
-      }
-    }
-
-    @media (max-width:430px) {
-      .bname {
-        padding: 0px;
-        font-weight: 400px;
-        font-size: 19px;
-      }
-
-      .logo {
-        height: 1.4rem;
-        width: 1.4rem;
-      }
-
-      .carimg {
-        height: 15rem;
-        width: 16rem;
-      }
-
-      .imgbox {
-        height: 25.8rem;
-      }
-
-      .cardet {
-        font-size: 1.4rem;
-      }
-    }
-
-    .updates {
-      position: relative;
-      top: 8rem;
-      height: 30rem;
-      background-color: red;
-    }
-  </style>
-
   <!--Bootstrap-->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-    crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-    crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <link rel="stylesheet" href="./styles.css">
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
   <!--google font-->
   <link href="https://fonts.googleapis.com/css?family=Montserrat|Ubuntu&display=swap" rel="stylesheet">
-</head>
+  <style>
+    body {
+  font-family: "Montserrat";
+  text-align: center;
+}
 
+h1, h2, h3, h4, h5, h6 {
+  font-family: "Ubuntu";
+}
+h1, .bname{
+  font-weight: bold;
+}
+.navbar{
+  z-index:1;
+}
+.logo {
+  height:2.7rem;
+  width:2.7rem;
+}
+.bname {
+  padding:0rem 0rem 0rem 1rem;
+  font-size:2rem;
+  font-family: "Montserrat";
+}
+
+.imgbox{
+  background-color:#cce0ff;
+  position:relative;
+  top:2.5rem;
+  text-align:center;
+}
+.carimg{
+  height:30rem;
+  width:45rem;
+  border-radius:1rem;
+  margin-top:2rem;
+}
+@media (max-width:1000px)and (min-width:430px){
+  .carimg{
+    height:19rem;
+    width:19rem;
+  }
+  .imgbox{
+    height:37rem;
+  }
+}
+@media (max-width:430px){
+    .bname{
+        padding:0px;
+        font-weight:400px;
+        font-size:19px;
+    }
+    .logo{
+      height:1.4rem;
+      width:1.4rem;
+    }
+    .carimg{
+        height:15rem;
+        width:16rem;
+    }
+    .imgbox{
+    height:25.8rem;
+  }
+    .cardet{
+     font-size:1.4rem;
+    }
+}
+
+.updates{
+  position:relative;
+  top:5rem;
+  background-color:#cce0ff;
+}
+.alumni-box{
+    height:23rem;
+    margin:1rem 2rem 1rem 15rem;
+}
+.create-update{
+   height:20rem;
+  margin:1rem 1rem 1rem 14rem;
+}
+.update-box{
+  height:28rem;
+  margin:1rem 14rem 1rem 1rem;
+}
+.card:hover{
+    box-shadow: 10px 10px 11px rgba(33,33,33,1);
+}
+.cheader{
+  background-color:#ffd9b3;
+}
+.aluimg{
+  height:50%;
+  width:50%;
+  margin-top:3%;
+  margin-left:25%;
+  border-radius:50%;
+}
+
+@media (max-width:1200px)and (min-width:991px){
+  .alumni-box, .create-update{
+      margin:1rem 1rem 1rem 7rem;
+  }
+  .update-box{
+    margin:1rem 7rem 1rem 1rem ;
+  }
+}
+@media (max-width:991px)and (min-width:767px){
+  .update-box, .alumni-box, .create-update{
+      margin:1rem 27% 1rem 27%;
+  }
+}
+@media (max-width:767px) and (min-width:520px){
+  .update-box, .alumni-box, .create-update{
+      margin:1rem 19% 1rem 19%;
+  }
+}
+@media (max-width:520px){
+  .update-box, .alumni-box, .create-update{
+      margin:1rem 1.5% 1rem 1.5%;
+  }
+}
+
+.bottom{
+  position:relative;
+  top:7.5rem;
+  height:50%;
+  width:100%;
+}
+
+  </style>
+</head>
 <body>
 
   <!--navbar-->
   <div>
     <nav class="navbar container-fluid navbar-expand-lg bg-dark navbar-dark navbar">
 
-      <img class="logo" src="./img/National_Institute_of_Technology,_Patna_Logo.png">
+      <img  class="logo" src="./img/National_Institute_of_Technology,_Patna_Logo.png">
       <a class="navbar-brand bname" href="">The Colleges of Goa</a>
 
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02">
@@ -130,7 +158,7 @@
 
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="">Activities</a>
+            <a class="nav-link" href="#update">Updates</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="">Events</a>
@@ -144,6 +172,9 @@
           <li class="nav-item">
             <a class="nav-link" href="/login">Login</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#more">More</a>
+          </li>
         </ul>
 
       </div>
@@ -152,40 +183,95 @@
 
   <!-- carousel-->
 
-  <!-- <div class="container-fluid imgbox">
-        <div class="container">
-          <div id="carouselExampleControls" class="carousel slide" data-ride="carousel" data-interval="2500">
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-      <img class="carimg" src="./img/download 3.jpg"></img>
-      <h1 class="cardet">"Our main Goal is to Unify all Student and form a platform for excahnge of Ideas and Info. "</h1>
-      </div>
-      <div class="carousel-item">
-      <img class="carimg" src="./img/download 1.jpg"></img>
-      <h1 class="cardet">"Once a Student always a Student. We care even for a Single One"</h1>
-      </div>
-      <div class="carousel-item">
-      <img class="carimg" src="./img/download.jpg"></img>
-      <h1 class="cardet">"A strong DataBase is available with maximum Security and Privacy."</h1>
+  <div class="container-fluid imgbox">
+    <div class="container">
+
+      <div id="carouselExampleControls" class="carousel slide" data-ride="carousel" data-interval="2500">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img class="carimg" src="./img/download 3.jpg"></img>
+            <h1 class="cardet">"Our main Goal is to Unify all Student and form a platform for excahnge of Ideas and Info. "</h1>
+          </div>
+          <div class="carousel-item">
+            <img class="carimg" src="./img/download 1.jpg"></img>
+            <h1 class="cardet">"Once a Student always a Student. We care even for a Single One"</h1>
+          </div>
+          <div class="carousel-item">
+            <img class="carimg" src="./img/download.jpg"></img>
+            <h1 class="cardet">"A strong DataBase is available with maximum Security and Privacy."</h1>
+          </div>
+        </div>
+
       </div>
     </div>
+    <a class="carousel-control-prev carbtn" href="#carouselExampleControls" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next carbtn" href="#carouselExampleControls" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
   </div>
-</div>
-<a class="carousel-control-prev carbtn" href="#carouselExampleControls" role="button" data-slide="prev">
-  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-  <span class="sr-only">Previous</span>
-</a>
-<a class="carousel-control-next carbtn" href="#carouselExampleControls" role="button" data-slide="next">
-  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-  <span class="sr-only">Next</span>
-</a>
-      </div> -->
 
   <!--updates-->
-  <div class="container-fluid updates">
+  <div class="container-fluid updates" Id="update">
+      <div class="row">
+        <div class="col-lg-6 col-md-12 col-sm-12">
+          <div class="row">
+            <div class="col-12">
+              <div class="card alumni-box">
+    <img src="./img/download4.jpg" class="card-img-top aluimg" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Manohar Parikar</h5>
+      <p class="card-text">Chief Minister of Goa</p>
+      <p>IIT Bombay Alumni</p>
+    </div>
   </div>
+            </div>
+            <div class="col-12">
+              <div class="card create-update">
+              <div class="card-header cheader">qwerty</div>
+              <div class="card-body"></div>
+            </div>
+          </div>
 
+          <div class="col-12">
+              <div class="card create-update">
+              <div class="card-header cheader">qwerty</div>
+              <div class="card-body"></div>
+            </div>
+          </div>
+
+        </div>
+      </div>
+      <div class="col-lg-6 col-md-12 col-sm-12">
+          <div class="row">
+              <div class="col-12">
+        <div class="card update-box">
+          <div class="card-header cheader"><h1>UPDATE BOX</h1></div>
+          <div class="card-body">
+        </div>
+      </div>
+      </div>
+
+              <div class="col-12">
+              <div class="card update-box">
+              <div class="card-header cheader">qwerty</div>
+              <div class="card-body"></div>
+            </div>
+           </div>
+
+      </div>
+      </div>
+      </div>
+    </div>
+
+    <!--bottom-->
+<div class="container-fluid bg-dark bottom" Id="more">qwertyuiopContrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.
+
+The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.
+</div>
 
 </body>
-
 </html>
