--- a/public/stylesheet/styling.css
+++ b/public/stylesheet/styling.css
@@ -1,83 +1,130 @@
-nav {
-  background-color: #000000;
-  color: white;
-  overflow: hidden;
-}
-.sticky {
-  position: fixed;
-  top: 0;
-  width: 100%;
+body {
+font-family: "Montserrat";
+text-align: center;
 }
 
-nav a {
-  /* background: ; */
-  color: white;
+h1, h2, h3, h4, h5, h6 {
+font-family: "Ubuntu";
+}
+h1, .bname{
+font-weight: bold;
+}
+.navbar{
+z-index:1;
+}
+.logo {
+height:2.7rem;
+width:2.7rem;
+}
+.bname {
+padding:0rem 0rem 0rem 1rem;
+font-size:2rem;
+font-family: "Montserrat";
 }
 
-nav ul li a:hover {
-  color:white;
-  border: 2px solid white;
-  padding: 5px;
-  border-radius: 25px;
+.imgbox{
+background-color:#cce0ff;
+position:relative;
+/* top:2.5rem; */
+text-align:center;
+}
+.carimg{
+height:18rem;
+width:67rem;
+border-radius:1rem;
+filter: drop-shadow(0 0 10px #000000);
+/* margin-top:2rem; */
 }
 
-nav button span {
-  color: white;
+@media (max-width:1000px)and (min-width:430px){
+.carimg{
+height:19rem;
+width:43rem;
+}
+/* .imgbox{
+height:37rem;
+} */
+}
+@media (max-width:430px){
+.bname{
+    padding:0px;
+    font-weight:400px;
+    font-size:19px;
+}
+.logo{
+  height:1.4rem;
+  width:1.4rem;
+}
+.carimg{
+    height:15rem;
+    width:16rem;
+}
+.imgbox{
+height:25.8rem;
+}
+.cardet{
+ font-size:1.4rem;
+}
 }
 
-nav ul li a {
-  padding-right: 40px !important;
-  font-weight: 600;
+.updates{
+position:relative;
+/* top:5rem; */
+background-color:#3e69ab;
+}
+.alumni-box{
+height:23rem;
+margin:1rem 2rem 1rem 15rem;
+}
+.create-update{
+height:20rem;
+margin:1rem 1rem 1rem 14rem;
+}
+.update-box{
+height:28rem;
+margin:1rem 14rem 1rem 1rem;
+}
+.card:hover{
+box-shadow: 10px 10px 11px rgba(33,33,33,1);
+}
+.cheader{
+background-color:#ffd9b3;
+}
+.aluimg{
+height:50%;
+width:50%;
+margin-top:3%;
+margin-left:25%;
+border-radius:50%;
 }
 
-.navbar-responsive {
-  border: none;
-  color: rgba(255, 255, 255, 0.5) !important;
-  cursor: pointer;
-  padding-right: 0;
-  text-transform: uppercase;
-  font-size: 16px;
-  letter-spacing: .12em;
-  position: relative;
+@media (max-width:1200px)and (min-width:991px){
+.alumni-box, .create-update{
+  margin:1rem 1rem 1rem 7rem;
 }
-@media only screen and (max-width: 990px) {
-  nav {
-    background-color: #000000;
-    color: white;
-  }
-
-  nav a {
-    color: white;
-  }
-  nav li{
-    margin: auto;
-    padding-bottom: 1.0em;
-  }
-
-  nav a:hover {
-    color: white;
-  }
-
-  .navbar-responsive span {
-    padding: 0px 54px 0px 33px;
-    cursor: pointer;
-  }
+.update-box{
+margin:1rem 7rem 1rem 1rem ;
+}
+}
+@media (max-width:991px)and (min-width:767px){
+.update-box, .alumni-box, .create-update{
+  margin:1rem 27% 1rem 27%;
+}
+}
+@media (max-width:767px) and (min-width:520px){
+.update-box, .alumni-box, .create-update{
+  margin:1rem 19% 1rem 19%;
+}
+}
+@media (max-width:520px){
+.update-box, .alumni-box, .create-update{
+  margin:1rem 1.5% 1rem 1.5%;
+}
 }
 
-nav button:focus {
-  outline: none;
-}
-
-.custom {
-  border-radius: 10px;
-  border-style: outset;
-  border-width: 2px;
-}
-.btn-dark {
-  background: #000000 !important;
-  border-radius: 50px;
-  width: 225px;
-  font-weight: 800px;
-  color: #e8b447 !important;
-  transition: all 0.3s linear;
+.bottom{
+position:relative;
+top:7.5rem;
+height:50%;
+width:100%;
 }
