--- a/views/lifemem.ejs
+++ b/views/lifemem.ejs
@@ -10,6 +10,9 @@
   <!--google font-->
   <link href="https://fonts.googleapis.com/css?family=Montserrat|Ubuntu&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="stylesheet/styling.css">
+  <link rel="stylesheet" href="stylesheet/animate.css">
+
+
 </head>
 <body>
 
@@ -64,14 +67,14 @@
             <a class="nav-link dropdown-toggle" data-toggle="dropdown">Events<span class="caret"></span></a>
 
             <ul class="dropdown-menu">
-               <li><a class="dropdown-item" href="/calendar">Centralised Calendar</a></li>
-               <li><a class="dropdown-item"  href="/">At Govt. of Goa</a></li>
-               <!-- <li><a class="dropdown-item"  href="/">Hostel Alumni Team Stewardship</a></li> -->
+               <li><a class="dropdown-item" href="#">Centralised calendar</a></li>
+               <li><a class="dropdown-item"  href="#">At Govt. of Goa</a></li>
+               <!-- <li><a class="dropdown-item"  href="#">Hostel Alumni Team Stewardship</a></li>
+                <li class="divider"></li>
+               <li><a class="dropdown-item"  href="#">iCAN</a></li> -->
                <!-- <li class="divider"></li> -->
-               <!-- <li><a class="dropdown-item"  href="/">iCAN</a></li> -->
-               <!-- <li class="divider"></li> -->
-               <li><a class="dropdown-item"  href="/">India Events</a></li>
-               <!-- <li><a class="dropdown-item"  href="/">Reunion</a></li> -->
+               <li><a class="dropdown-item"  href="#">India Events</a></li>
+               <!-- <li><a class="dropdown-item"  href="#">Reunion</a></li> -->
              </ul>
           </li>
           <li class="nav-item dropdown">
@@ -161,16 +164,17 @@
 
   <!--updates-->
   <div class="container-fluid updates" Id="update">
-      <div class="row">
+    <h1 class="animated fadeInRight delay-1s">Welcome to life Membership</h1>
+      <!-- <div class="row">
         <div class="col-lg-6 col-md-12 col-sm-12">
           <div class="row">
             <div class="col-12">
               <div class="card alumni-box">
-    <img src="./img/chiefminister.jpg" class="card-img-top aluimg" alt="...">
+    <img src="./img/download4.jpg" class="card-img-top aluimg" alt="...">
     <div class="card-body">
-      <h5 class="card-title">Pramod Sawant</h5>
+      <h5 class="card-title">Manohar Parikar</h5>
       <p class="card-text">Chief Minister of Goa</p>
-      <!-- <p>IIT Bombay Alumni</p> -->
+      <p>IIT Bombay Alumni</p>
     </div>
   </div>
             </div>
@@ -209,7 +213,7 @@
 
       </div>
       </div>
-      </div>
+      </div> -->
     </div>
 
     <!--bottom-->
