added flash messages

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,7 +19,7 @@
 
 
             <p>
-                <a class="btn btn-primary btn-large" href="/alumni/new">UPDATE YOYR PROFILE</a>
+                <a class="btn btn-primary btn-large" href="/alumni/new">ADD YOUR PROFILE</a>
             </p>
 
             <p>
