--- a/views/new.ejs
+++ b/views/new.ejs
@@ -6,13 +6,13 @@
         <div class="row">
             <h1 style="text-align: center;">Create Account</h1>
             <div style="width: 30%; margin: 30px auto;">
-                <form action="/alumni" method="POST">
+                <form action="/alumni" method="POST" enctype="multipart/form-data">
                     <div class="form-group">
                         <input class="form-control" type="text" name="name" placeholder="name">
                     </div>
-                    <!-- <div class="form-group">
-                        <input class="form-control" type="text" name="image" placeholder="image url">
-                    </div> -->
+                    <div class="form-group">
+                        <input class="form-control" type="file" name="image" placeholder="image">
+                    </div>
 
                     <div class="form-group">
                         <input class="form-control" type="text" name="branch" placeholder="branch">
