--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -190,62 +190,162 @@
 
   <!--updates-->
   <div class="container-fluid updates" Id="update">
-      <div class="row">
-        <div class="col-lg-6 col-md-12 col-sm-12">
-          <div class="row">
-            <div class="col-12">
-              <div class="card alumni-box">
-    <img src="./img/chiefminister.jpg" class="card-img-top aluimg" alt="...">
+    <div class="row">
+      <div class="col-lg-6 col-md-12 col-sm-12">
+        <div class="row">
+          <div class="col-12">
+            <div class="card alumni-box">
+  <img src="./img/download4.jpg" class="card-img-top aluimg" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">Manohar Parikar</h5>
+    <p class="card-text">Chief Minister of Goa</p>
+    <p>IIT Bombay Alumni</p>
+  </div>
+</div>
+          </div>
+          <div class="col-12">
+            <div class="card job">
+            <div class="card-header text-primary cheader"><h3>JOBS</h3></div>
+            <div class="card-body">
+
+              <div class="container-fluid my-2">
+  <div class="row">
+  <div class="col-9">
+  <h6 class="text-primary job-title">Color and Material Designer at Auto OEM</h6>
+     <p class="job-des">Location: Chennai <br>
+     Salary: 16 LPA<br>
+     Apply by: 20th Jan '20</p>
+  </div>
+  <div class="col-3 pt-1">
+      <button type="button" class="btn btn-sm btn-primary">APPLY</button>
+  </div>
+  </div>
+</div>
+
+<div class="container-fluid my-3">
+  <div class="row">
+  <div class="col-9">
+  <h6 class="text-primary job-title">Color and Material Designer at Auto OEM</h6>
+     <p class="job-des">Location: Chennai <br>
+     Salary: 16 LPA<br>
+     Apply by: 20th Jan '20</p>
+  </div>
+  <div class="col-3 pt-1">
+      <button type="button" class="btn btn-sm btn-primary">APPLY</button>
+  </div>
+  </div>
+</div>
+
+            </div>
+          </div>
+        </div>
+
+        <div class="col-12">
+            <div class="card event">
+            <div class="card-header text-primary cheader"><h3>EVENTS</h3></div>
+            <div class="card-body">
+
+
+                <div class="card border-primary" style="max-width: 28rem; max-height:12rem; margin-bottom:1rem;">
+    <div class="card-header text-white bg-primary">
+        <div class="row">
+          <div class="col-6 date"> <h3>18<sup>th</sup></h3></div>
+        <div class="col-6 month"><h5>Jan 2020,<br>Saturday</h5></div>
+      </div>
+    </div>
     <div class="card-body">
-      <h5 class="card-title">Pramod Sawant</h5>
-      <p class="card-text">Chief Minister of Goa</p>
-      <!-- <p>IIT Bombay Alumni</p> -->
+      <h6 class="card-title">Nit Patna Hackathon</h6>
+      <button type="button" class="btn btn-sm btn-outline-primary">Read more..</button>
     </div>
   </div>
-            </div>
-            <div class="col-12">
-              <div class="card create-update">
-              <div class="card-header cheader">qwerty</div>
-              <div class="card-body"></div>
+  <div class="card border-primary" style="max-width: 28rem; max-height:12rem; margin-bottom:1rem;">
+<div class="card-header text-white bg-primary">
+<div class="row">
+<div class="col-6 date"> <h3>20<sup>th</sup></h3></div>
+<div class="col-6 month"><h5>Jan 2020,<br>Monday</h5></div>
+</div>
+</div>
+<div class="card-body">
+<h6 class="card-title">Nit Patna Hackathon Result Declaration</h6>
+<button type="button" class="btn btn-sm btn-outline-primary">Read more..</button>
+</div>
+</div>
+
             </div>
           </div>
-
-          <div class="col-12">
-              <div class="card create-update">
-              <div class="card-header cheader">qwerty</div>
-              <div class="card-body"></div>
-            </div>
-          </div>
-
         </div>
-      </div>
-      <div class="col-lg-6 col-md-12 col-sm-12">
-          <div class="row">
-              <div class="col-12">
-        <div class="card update-box">
-          <div class="card-header cheader"><h1>UPDATE BOX</h1></div>
-          <div class="card-body">
-        </div>
-      </div>
-      </div>
 
-              <div class="col-12">
-              <div class="card update-box">
-              <div class="card-header cheader">qwerty</div>
-              <div class="card-body"></div>
-            </div>
-           </div>
-
-      </div>
-      </div>
       </div>
     </div>
+    <div class="col-lg-6 col-md-12 col-sm-12">
+        <div class="row">
+            <div class="col-12">
+      <div class="card update-box">
+        <div class="card-header text-primary cheader"><h3>UPDATE BOX</h3></div>
+        <div class="card-body">
+      </div>
+    </div>
+    </div>
 
-    <!--bottom-->
-<div class="container-fluid bg-dark bottom" Id="more">qwertyuiopContrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.
+            <div class="col-12">
+            <div class="card gallery">
+            <div class="card-header text-primary cheader"><h3>GALLERY</h3></div>
+            <div class="card-body"></div>
+          </div>
+         </div>
 
-The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.
+    </div>
+    </div>
+    </div>
+  </div>
+
+  <!--bottom-->
+  <div class="container-fluid bottom" Id="more">
+<div class="row bg-dark ro">
+  <div class="col col-lg-3 col-md-6 col-sm-12">
+      <br><br>
+      <h6>ABOUT</h6>
+      <a>Colleges</a><br>
+      <a>Council Members</a><br>
+      <a>Alumni_Association</a><br>
+  </div>
+  <div class="col col-lg-3 col-md-6 col-sm-12">
+      <br><br>
+      <h6>BROWSE</h6>
+      <a>By Search</a>
+      <br><br><br>
+      <h6>DEVELOPER</h6>
+      <a>Team</a><br>
+      <a>Feature</a><br>
+      <a>Goals</a><br>
+      </div>
+  <div class="col col-lg-3 col-md-6 col-sm-12">
+      <br><br>
+      <h6>EVENTS</h6>
+      <a>Nitp_Hacathon</a><br>
+      <a>Nitp_Hackathon_Result</a><br>
+      </div>
+  <div class="col col-lg-3 col-md-6 col-sm-12">
+      <br><br>
+      <h6>CONTACT US</h6>
+      <p>alumni@goa.ac.in<br>1800-256-4444<br><br>
+      alu.go@goa.com<br>1800-234-2479</p>
+      </div>
 </div>
-</body>
 
+<div class="row bot text-dark">
+          <div class="col-lg-6 col-md-12">
+              <div class="py-4"><h6>&#0169;Copyright 2020</h6></div>
+          </div>
+          <div class="col-lg-6 col-md-12">
+             <div>Alumni management software provided by<span class="text-primary sha"> SHA-256</span></div>
+          </div>
+          </div>
+</div>
+
+
+  </div>
+  </div>
+
+</body>
 </html>
