--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
 <body>
 
     <% if(currentUser && currentUser.isAdmin) { %>
-    <h1> You are Admin !!</h1>
+    <h1> Welcome College Admin ! :) !!</h1>
 
     <% } %>
     <div id="fb-root"></div>
@@ -12,7 +12,6 @@
         src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v5.0"></script>
 
     <div class="container">
-
         <header class="jumbotron">
             <div class="container">
                 <center>
