--- a/views/register.ejs
+++ b/views/register.ejs
@@ -127,7 +127,7 @@
     <div class="main">
         <p class="sign" align="center">Sign UP</p>
         <form action="/register" method="POST">
-            <input class="un" type="text" name="firstname" placeholder="First name">
+            <input class="un" type="text" name="enrollment" placeholder="College Enrollment No.">
             <input class="un" type="email" name="username" placeholder="Email@domain.com">
             <input class="pass" type="password" name="password" placeholder="password">
             <input class="pass" type="password" name="adminCode" placeholder="CollegeCode (if College)">
