--- a/views/index.ejs
+++ b/views/index.ejs
@@ -45,6 +45,9 @@
             <p>
                 <a class="btn btn-primary btn-large" href="/jobbody"> Post Job</a>
             </p>
+            <p>
+                <a class="btn btn-primary btn-large" href="/eventbody"> Add Event</a>
+            </p>
         </div>
     </header>
 
