--- a/views/jobcontent.ejs
+++ b/views/jobcontent.ejs
@@ -7,7 +7,7 @@
     <p>
         <%=job.content%>
     </p>
-    <h1><a href=<%="job.image"%>></h1>
+    <h1><a href=<%="job.image"%></h1>
     
     <% }) %>
 
