--- a/views/newblog.ejs
+++ b/views/newblog.ejs
@@ -1,6 +1,7 @@
 <% include partials/header1 %>
 <div class="ui main text container segment">
     <div class="ui huge header">New Blog</div>
+    <li>    <a href="/blogs/new" class="item">Create New Blog</a>   </li>
     <form class="ui form" action="/blogs" method="POST">
         <div class="field">
             <label>Title</label>
