--- a/views/indexjob.ejs
+++ b/views/indexjob.ejs
@@ -1,25 +1,23 @@
 <% include partials/header1 %>
 
 <div class="ui main text container">
-    <div class="ui huge header">Alumni Blogs</div>
-    <li>    <a href="/blogs/new" class="item">New Blog</a>   </li>
+    <div class="ui huge header">Available Jobs</div>
+    
+   <li><a class="ui orange basic button" href="/jobs/new">Create New Job</a></li> 
     <div class="ui top  attached segment">
         <div class="ui divided items">
-            <% blogs.forEach(function(blog){ %>
+            <% jobs.forEach(function(job){ %>
                 <div class="item">
                     <div class="image">
-                        <img src="<%= blog.image %>" >
+                        <img class="ui centered rounded image" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRaxvSPe1JbRfQ3nqKSEBpU_CzKqJKS_pPgMO4WiPwUr5BbHLnf&s" >
                     </div>
                     <div class="content">
-                         <a class="header" href="/blogs/<%= blog._id %>"><%=blog.title%></a>
+                         <a class="header" href="/jobs/<%= job._id %>"><%=job.title%></a>
                          <div class="meta">
-                             <span><%= blog.created.toDateString() %></span>
-                         </div>
-                         <div class="description">
-                             <p><%- blog.body.substring(0, 100) %>...</p>
+                             <span><%= job.created.toDateString() %></span>
                          </div>
                          <div class="extra">
-                             <a class="ui floated basic violet button" href="/blogs/<%= blog._id %>">
+                             <a class="ui floated basic violet button" href="/jobs/<%= job._id %>">
                                  Read More
                                  <i class="right chevron icon"></i>
                              </a>
