--- a/views/partials/header1.ejs
+++ b/views/partials/header1.ejs
@@ -32,7 +32,7 @@
                             <li>    <a href="/alumni"><span class="glyphicon glyphicon-home"></span> Home</a>    </li>
                             <li>    <a href="/about"><span class="glyphicon glyphicon-info-sign"></span> About</a>    </li>
                             <li>    <a href="/blogs"><span class="glyphicon glyphicon-info-sign"></span> Blog</a>    </li>
-                            <li>    <a href="/blogs/new" class="item">New Post</a>   </li>
+                            <li>    <a href="/jobs"><span class="glyphicon glyphicon-info-sign"></span> Job</a>    </li>
                         </ul>
                         <ul class="nav navbar-nav navbar-right">
                                 <li><a href="/login"><span class="glyphicon glyphicon-log-in"  aria-hidden="true" ></span> Login</a></li>
