--- a/views/post.ejs
+++ b/views/post.ejs
@@ -1,6 +1,6 @@
-<%- include("partials/header"); -%>
+<% include partials/header1 %>
 
-  <h1><%=title%></h1>
+  <h1><%= title %></h1>
   <p><%=content%></p>
 
-<%- include("partials/footer"); -%>
+  <% include partials/footer %>
