--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -733,29 +733,39 @@
         <section class="packages_area p_120">
           <div class="container">
             <div class="row packages_inner">
-              <div class="col-lg-4">
-                <div class="packages_text">
-                  <h3>Event<br /></h3>
-                  <!-- <p>There is a moment in the life of any aspiring astronomer that it is time to buy that first telescope. It’s exciting to think about setting up your own viewing station.</p> -->
-                </div>
+                <div class="col-lg-4">
+                  <div class="packages_item">
+                    <div class="pack_head">
+                      <i class="lnr lnr-diamond"></i>
+                      <h3>Notice</h3>
+                    </div>
+                    <div class="pack_body">
+                      <ul class="list">
+                        <li><a href="#">Welcome to our Portal</a></li>
+                         <li><a href="#">Appointment for position..</a></li>
+                         <li><a href="#">Click to apply..</a></li>
+                      </ul>
+                    </div>
+                    <div class="pack_footer">
+                      <a class="main_btn" href="/notices">Show more</a>
+                    </div>
+                  </div>
               </div>
               <div class="col-lg-4">
                 <div class="packages_item">
                   <div class="pack_head">
                     <i class="lnr lnr-graduation-hat"></i>
                     <h3>Event</h3>
-                    <!-- <p>For the individuals</p> -->
                   </div>
                   <div class="pack_body">
                     <ul class="list">
-                      <li><a href="#">Lorem ipsum dolor sit amet.</a></li>
-                      <li><a href="#">Lorem ipsum dolor sit amet,</a></li>
-                      <li><a href="#">Lorem ipsum dolor sit amet, </a></li>
+                      <li><a href="#">Gala Fete Organised..</a></li>
+                      <li><a href="#">Grand Entrepreniurship Summit</a></li>
+                      <li><a href="#">E-Commerce Submit..</a></li>
                     </ul>
                   </div>
                   <div class="pack_footer">
-                    <!-- <h4>£399.00</h4> -->
-                    <a class="main_btn" href="#">Join Now</a>
+                    <a class="main_btn" href="/events">Show more</a>
                   </div>
                 </div>
               </div>
@@ -763,19 +773,17 @@
                 <div class="packages_item">
                   <div class="pack_head">
                     <i class="lnr lnr-diamond"></i>
-                    <h3>Notice</h3>
-                    <!-- <p>For the individuals</p> -->
+                    <h3>Job</h3>
                   </div>
                   <div class="pack_body">
                     <ul class="list">
-                      <li><a href="#">Lorem ipsum dolor sit amet,.</a></li>
-                       <li><a href="#">Lorem ipsum dolor sit amet,.</a></li>
-                       <li><a href="#">Lorem ipsum dolor sit amet,</a></li>
+                      <li><a href="#">Data Science Jobs</a></li>
+                       <li><a href="#">AWS Engineer</a></li>
+                       <li><a href="#">Website Developers!</a></li>
                     </ul>
                   </div>
                   <div class="pack_footer">
-                    <!-- <h4>£399.00</h4> -->
-                    <a class="main_btn" href="#">Join Now</a>
+                    <a class="main_btn" href="/jobs">Show more</a>
                   </div>
                 </div>
               </div>
