--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -85,6 +85,7 @@
                             <li>    <a href="/about"><span class="glyphicon glyphicon-info-sign"></span> About</a>    </li>
                             <li>    <a href="/blogs"><span class="glyphicon glyphicon-info-sign"></span> Blog</a>    </li>
                             <li>    <a href="/jobs"><span class="glyphicon glyphicon-info-sign"></span> Jobs</a>    </li>
+                            <li>    <a href="/notices"><span class="glyphicon glyphicon-info-sign"></span> Notice</a>    </li>
                         </ul>
                         <ul class="nav navbar-nav navbar-right">
                             <% if(!currentUser){ %>
