--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -1,351 +1,3 @@
-<!-- <!DOCTYPE html>
-<html>
-<head>
-
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-  <link rel="stylesheet" href="./styles.css">
-  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-
-  <link href="https://fonts.googleapis.com/css?family=Montserrat|Ubuntu&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="stylesheet/styling.css">
-
-<style>
-@keyframes boing {
-    0% {
-        transform: scale(1.2);
-    }
-    40% {
-        transform: scale(.6);
-    }
-    60% {
-        transform: scale(1.2);
-    }
-    80% {
-        transform: scale(.8);
-    }
-    100% {
-        transform: scale(1);
-    }
-}
-</style>
-</head>
-<body>
-  <div>
-    <nav class="navbar container-fluid navbar-expand-lg bg-dark navbar-dark navbar">
-
-      <img  class="logo" src="./img/National_Institute_of_Technology,_Patna_Logo.png">
-      <a class="navbar-brand bname" href="">The Colleges of Goa</a>
-
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" data-toggle="dropdown">Initiatives<span class="caret"></span></a>
-
-            <ul class="dropdown-menu">
-               <li><a class="dropdown-item effect-underline" href="/StudentScholarships">Student Scholarships</a></li>
-               <li><a class="dropdown-item effect-underline"  href="/YFA">Young Faculty Awards (YFA)</a></li>
-               <li><a class="dropdown-item effect-underline"  href="/HATS">Hostel Alumni Team Stewardship</a></li>
-               <li class="divider"></li>
-               <li><a class="dropdown-item effect-underline"  href="/iCAN">iCAN</a></li>
-               <li class="divider"></li>
-               <li><a class="dropdown-item effect-underline"  href="/FinancialAid">Financial Aid Program</a></li>
-               <li><a class="dropdown-item effect-underline"  href="/RIG">Rural Initiative Group (RIG)</a></li>
-             </ul>
-          </li>
-
-
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" data-toggle="dropdown">Community<span class="caret"></span></a>
-
-            <ul class="dropdown-menu">
-               <li><a class="dropdown-item" href="#">Alumni Search</a></li>
-               <li><a class="dropdown-item effect-underline"  href="/chapters">Chapters</a></li>
-               <li><a class="dropdown-item effect-underline"  href="/lifemem">Life Membership</a></li>
-               <li class="divider"></li>
-               <li><a class="dropdown-item effect-underline"  href="/reunion">Reunion Corner</a></li>
-               <li class="divider"></li>
-               <li><a class="dropdown-item effect-underline"  href="/classgro">Class Groups</a></li>
-               <li><a class="dropdown-item effect-underline"  href="/fundamental">Fundamentals</a></li>
-             </ul>
-          </li>
-
-
-
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" data-toggle="dropdown">Events<span class="caret"></span></a>
-
-            <ul class="dropdown-menu">
-               <li><a class="dropdown-item effect-underline" href="/calendar">Centralised Calendar</a></li>
-               <li><a class="dropdown-item effect-underline"  href="/">At Govt. of Goa</a></li>
-               <li><a class="dropdown-item"  href="/">Hostel Alumni Team Stewardship</a></li>
-               <li class="divider"></li>
-               <li><a class="dropdown-item"  href="/">iCAN</a></li>
-               <li class="divider"></li>
-               <li><a class="dropdown-item"  href="/">India Events</a></li>
-               <li><a class="dropdown-item"  href="/">Reunion</a></li>
-             </ul>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" data-toggle="dropdown">About Us<span class="caret"></span></a>
-
-            <ul class="dropdown-menu">
-               <li><a class="dropdown-item effect-underline" href="#">Govt. of Goa</a></li>
-               <li><a class="dropdown-item effect-underline"  href="#">Education Directorate</a></li>
-             </ul>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" data-toggle="dropdown">More<span class="caret"></span></a>
-
-            <ul class="dropdown-menu">
-               <li><a class="dropdown-item effect-underline" href="#">Student Scholarships</a></li>
-               <li><a class="dropdown-item effect-underline"  href="#">Young Faculty Awards (YFA)</a></li>
-               <li><a class="dropdown-item effect-underline"  href="#">Hostel Alumni Team Stewardship</a></li>
-                <li class="divider"></li>
-               <li><a class="dropdown-item effect-underline"  href="#">iCAN</a></li>
-               <li class="divider"></li>
-               <li><a class="dropdown-item effect-underline"  href="#">Financial Aid Program</a></li>
-               <li><a class="dropdown-item effect-underline"  href="#">Rural Initiative Group (RIG)</a></li>
-             </ul>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" data-toggle="dropdown">Giving back<span class="caret"></span></a>
-
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item effect-underline"  href="/donate">Donate</a></li>
-               <li><a class="dropdown-item effect-underline"  href="#">What to Support?</a></li>
-               <li><a class="dropdown-item effect-underline"  href="#">Why Giving Matters</a></li>
-               <li><a class="dropdown-item"  href="#"></a></li>
-             </ul>
-          </li>
-                    <%  if(!currentUser) {  %>
-                        <li class="nav-item"> <a class="nav-link" href='/login'>Login</a></li>
-                        <li class="nav-item"> <a class="nav-link" href='/register'>Sign Up</a></li>
-                        <% } else{ %>
-                            <li class="nav-item"> <a class="nav-link" href="#">  Signed in as: <%= currentUser.username %> </a>
-                            </li>
-                            <li class="nav-item"> <a class="nav-link" href='/logout'>Logout</a></li>
-                            <%  } %>
-
-          <li class="nav-item">
-            <a class="nav-link" href="/register">Signup</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/login">Login</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#more">More</a>
-          </li>
-        </ul>
-
-      </div>
-    </nav>
-  </div>
-
-  <div class="container-fluid imgbox">
-    <div class="container">
-
-      <div id="carouselExampleControls" class="carousel slide hidden-xs" data-ride="carousel" data-interval="2500">
-        <ol class="carousel-indicators">
-    <li data-target="#carouselExampleControls" data-slide-to="0" class="active"></li>
-    <li data-target="#carouselExampleControls" data-slide-to="1"></li>
-    <li data-target="#carouselExampleControls" data-slide-to="2"></li>
-  </ol>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img class="carimg" src="./img/download 3.jpg"></img>
-           <h1 class="cardet">"Our main Goal is to Unify all Student and form a platform for excahnge of Ideas and Info. "</h1>
-          </div>
-          <div class="carousel-item">
-            <img class="carimg" src="./img/download 1.jpg"></img>
-            <h1 class="cardet">"Once a Student always a Student. We care even for a Single One"</h1>
-          </div>
-          <div class="carousel-item">
-            <img class="carimg" src="./img/download.jpg"></img>
-           <h1 class="cardet">"A strong DataBase is available with maximum Security and Privacy."</h1>
-          </div>
-        </div>
-
-      </div>
-    </div>
-     <a class="carousel-control-prev carbtn" href="#carouselExampleControls" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next carbtn" href="#carouselExampleControls" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
-  </div>
-
-  updates
-  <div class="container-fluid updates" Id="update">
-    <div class="row">
-      <div class="col-lg-6 col-md-12 col-sm-12">
-        <div class="row">
-          <div class="col-12">
-            <div class="card alumni-box">
-  <img src="./img/chiefminister.jpg" class="card-img-top aluimg" alt="...">
-  <div class="card-body">
-    <h5 class="card-title">Pramod Sawant</h5>
-    <p class="card-text">Chief Minister of Goa</p>
-    <p>IIT Bombay Alumni</p>
-  </div>
-</div>
-          </div>
-          <div class="col-12">
-            <div class="card job">
-            <div class="card-header text-primary cheader"><h3>JOBS</h3></div>
-            <div class="card-body">
-
-              <div class="container-fluid my-2">
-  <div class="row">
-  <div class="col-9">
-  <h6 class="text-primary job-title">Color and Material Designer at Auto OEM</h6>
-     <p class="job-des">Location: Chennai <br>
-     Salary: 16 LPA<br>
-     Apply by: 20th Jan '20</p>
-  </div>
-  <div class="col-3 pt-1">
-      <button type="button" class="btn btn-sm btn-primary">APPLY</button>
-  </div>
-  </div>
-</div>
-
-<div class="container-fluid my-3">
-  <div class="row">
-  <div class="col-9">
-  <h6 class="text-primary job-title">Color and Material Designer at Auto OEM</h6>
-     <p class="job-des">Location: Chennai <br>
-     Salary: 16 LPA<br>
-     Apply by: 20th Jan '20</p>
-  </div>
-  <div class="col-3 pt-1">
-      <button type="button" class="btn btn-sm btn-primary">APPLY</button>
-  </div>
-  </div>
-</div>
-
-            </div>
-          </div>
-        </div>
-
-        <div class="col-12">
-            <div class="card event">
-            <div class="card-header text-primary cheader"><h3>EVENTS</h3></div>
-            <div class="card-body">
-
-
-                <div class="card border-primary" style="max-width: 28rem; max-height:12rem; margin-bottom:1rem;">
-    <div class="card-header text-white bg-primary">
-        <div class="row">
-          <div class="col-6 date"> <h3>18<sup>th</sup></h3></div>
-        <div class="col-6 month"><h5>Jan 2020,<br>Saturday</h5></div>
-      </div>
-    </div>
-    <div class="card-body">
-      <h6 class="card-title">Nit Patna Hackathon</h6>
-      <button type="button" class="btn btn-sm btn-outline-primary">Read more..</button>
-    </div>
-  </div>
-  <div class="card border-primary" style="max-width: 28rem; max-height:12rem; margin-bottom:1rem;">
-<div class="card-header text-white bg-primary">
-<div class="row">
-<div class="col-6 date"> <h3>20<sup>th</sup></h3></div>
-<div class="col-6 month"><h5>Jan 2020,<br>Monday</h5></div>
-</div>
-</div>
-<div class="card-body">
-<h6 class="card-title">Nit Patna Hackathon Result Declaration</h6>
-<button type="button" class="btn btn-sm btn-outline-primary">Read more..</button>
-</div>
-</div>
-
-            </div>
-          </div>
-        </div>
-
-      </div>
-    </div>
-    <div class="col-lg-6 col-md-12 col-sm-12">
-        <div class="row">
-            <div class="col-12">
-      <div class="card update-box">
-        <div class="card-header text-primary cheader"><h3>UPDATE BOX</h3></div>
-        <div class="card-body">
-      </div>
-    </div>
-    </div>
-
-            <div class="col-12">
-            <div class="card gallery">
-            <div class="card-header text-primary cheader"><h3>GALLERY</h3></div>
-            <div class="card-body"></div>
-          </div>
-         </div>
-
-    </div>
-    </div>
-    </div>
-  </div>
-
-  bottom
-  <div class="container-fluid bottom" Id="more">
-<div class="row bg-dark ro">
-  <div class="col-lg-3 col-md-6 col-sm-12">
-      <br><br>
-      <h6 class="effect-underline">ABOUT</h6>
-      <a>Colleges</a><br>
-      <a>Council Members</a><br>
-      <a>Alumni_Association</a><br>
-  </div>
-  <div class="col-lg-3 col-md-6 col-sm-12">
-      <br><br>
-      <h6 class="effect-underline">BROWSE</h6>
-      <a>By Search</a>
-      <br><br><br>
-      <h6 class="effect-underline">DEVELOPER</h6>
-      <a>Team</a><br>
-      <a>Feature</a><br>
-      <a>Goals</a><br>
-      </div>
-  <div class="col-lg-3 col-md-6 col-sm-12">
-      <br><br>
-      <h6 class="effect-underline">EVENTS</h6>
-      <a>Nitp_Hacathon</a><br>
-      <a>Nitp_Hackathon_Result</a><br>
-      </div>
-  <div class="col-lg-3 col-md-6 col-sm-12">
-      <br><br>
-      <h6 class="effect-underline">CONTACT US</h6>
-      <p>alumni@goa.ac.in<br>1800-256-4444<br><br>
-      alu.go@goa.com<br>1800-234-2479</p>
-      </div>
-</div>
-
-<div class="row bot text-dark">
-          <div class="col-lg-6 col-md-12">
-              <div class="py-4"><h6>&#0169;Copyright 2020</h6></div>
-          </div>
-          <div class="col-lg-6 col-md-12">
-             <div>Alumni management software provided by<span class="text-primary sha"> SHA-256</span></div>
-          </div>
-          </div>
-</div>
-
-
-  </div>
-  </div>
-
-</body>
-</html> -->
-
 <!doctype html>
 <html lang="en">
     <head>
@@ -393,8 +45,8 @@
 						</button>
 						<div class="collapse navbar-collapse offset" id="navbarSupportedContent">
 							<ul class="nav navbar-nav menu_nav ml-auto">
-								<li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
-								<li class="nav-item"><a class="nav-link" href="/">About</a></li>
+								<li class="nav-item active"><a class="nav-link" href="/">Home</a></li>
+								<!-- <li class="nav-item"><a class="nav-link" href="/">About</a></li> -->
 								<li class="nav-item submenu dropdown">
 									<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Initiatives</a>
 									<ul class="dropdown-menu">
@@ -424,8 +76,8 @@
 								<li class="nav-item submenu dropdown">
 									<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Blog</a>
 									<ul class="dropdown-menu">
-										<li class="nav-item"><a class="nav-link" href="/">Blog</a></li>
-										<li class="nav-item"><a class="nav-link" href="/">Blog Details</a></li>
+										<li class="nav-item"><a class="nav-link" href="/blogs">Blog</a></li>
+										<!-- <li class="nav-item"><a class="nav-link" href="/">Blog Details</a></li> -->
 									</ul>
 								</li>
 								<li class="nav-item"><a class="nav-link" href="/">Contact</a></li>
@@ -837,14 +489,14 @@
                     of their desktops, while delivery</p>
                 </div>
               </div>
-              
+
 
 
             </div>
 
           </br>
         </br>
-            
+
             <div class="fb-page" data-href="https://www.facebook.com/nitpplacement" data-tabs="timeline" data-width=""
               data-height="" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false"
               data-show-facepile="true">
