--- a/views/register.ejs
+++ b/views/register.ejs
@@ -11,6 +11,11 @@
 
 <head>
     <style>
+
+      /* input[placeholder]
+      {
+        text-transform:uppercase;
+      } */
         body {
             background-color: #F3EBF6;
             font-family: 'Ubuntu', sans-serif;
@@ -19,7 +24,7 @@
         .main {
             background-color: #FFFFFF;
             width: 400px;
-            height: 400px;
+            height: 32em;
             margin: 7em auto;
             border-radius: 1.5em;
             box-shadow: 0px 11px 35px 2px rgba(0, 0, 0, 0.14);
@@ -29,6 +34,7 @@
             padding-top: 40px;
             color: #8C55AA;
             font-family: 'Ubuntu', sans-serif;
+            text-transform:uppercase;
             font-weight: bold;
             font-size: 23px;
         }
