--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -104,7 +104,7 @@
               <div class="overlay bg-parallax" data-stellar-ratio="0.9" data-stellar-vertical-offset="0" data-background=""></div>
         <div class="container">
           <div class="banner_content text-center">
-            <h3>We ensure better connectivity <br />for the alumni of Goa</h3>
+            <h3 class="animated pulse infinite">We ensure better connectivity <br />for the alumni of Goa</h3>
             <!-- <p>In the history of modern astronomy, there is probably no one greater leap forward than the building and launch of the space telescope known as the Hubble.</p> -->
             <a class="main_btn" href="/register">Sign Up Now</a>
           </div>
@@ -124,7 +124,7 @@
                       <i class="lnr lnr-rocket"></i>
                     </div>
                     <div class="media-body">
-                      <h5>Group Chats<br /> </h5>
+                      <h5 class="animated pulse infinite">Group Chats<br /> </h5>
                     </div>
                   </div>
                 </div>
@@ -136,7 +136,7 @@
                       <i class="lnr lnr-earth"></i>
                     </div>
                     <div class="media-body">
-                      <h5>Search <br />Alumni</h5>
+                      <h5 class="animated pulse infinite">Search <br />Alumni</h5>
                     </div>
                   </div>
                 </div>
@@ -148,7 +148,7 @@
                       <i class="lnr lnr-smile"></i>
                     </div>
                     <div class="media-body">
-                      <h5>Job Apply<br /></h5>
+                      <h5 class="animated pulse infinite">Job Apply<br /></h5>
                     </div>
                   </div>
                 </div>
@@ -160,7 +160,7 @@
                       <i class="lnr lnr-tag"></i>
                     </div>
                     <div class="media-body">
-                      <h5>Networking<br /></h5>
+                      <h5 class="animated pulse infinite">Networking<br /></h5>
                     </div>
                   </div>
                 </div>
