--- a/views/chapters.ejs
+++ b/views/chapters.ejs
@@ -46,7 +46,7 @@
 						</button>
 						<div class="collapse navbar-collapse offset" id="navbarSupportedContent">
 							<ul class="nav navbar-nav menu_nav ml-auto">
-								<li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
+								<li class="nav-item active"><a class="nav-link" href="/">Home</a></li>
 								<li class="nav-item"><a class="nav-link" href="/">About</a></li>
 								<li class="nav-item submenu dropdown">
 									<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Initiatives</a>
@@ -105,7 +105,7 @@
               <div class="overlay bg-parallax" data-stellar-ratio="0.9" data-stellar-vertical-offset="0" data-background=""></div>
         <div class="container">
           <div class="banner_content text-center">
-            <h3>We ensure better connectivity <br />for the alumni of Goa</h3>
+            <h3 class="animated pulse infinite">We ensure better connectivity <br />for the alumni of Goa</h3>
             <!-- <p>In the history of modern astronomy, there is probably no one greater leap forward than the building and launch of the space telescope known as the Hubble.</p> -->
             <a class="main_btn" href="/register">Sign Up Now</a>
           </div>
@@ -125,7 +125,7 @@
                       <i class="lnr lnr-rocket"></i>
                     </div>
                     <div class="media-body">
-                      <h5>Group Chats<br /> </h5>
+                      <h5 class="animated pulse infinite">Group Chats<br /> </h5>
                     </div>
                   </div>
                 </div>
@@ -137,7 +137,7 @@
                       <i class="lnr lnr-earth"></i>
                     </div>
                     <div class="media-body">
-                      <h5>Search <br />Alumni</h5>
+                      <h5 class="animated pulse infinite">Search <br />Alumni</h5>
                     </div>
                   </div>
                 </div>
@@ -149,7 +149,7 @@
                       <i class="lnr lnr-smile"></i>
                     </div>
                     <div class="media-body">
-                      <h5>Job Apply<br /></h5>
+                      <h5 class="animated pulse infinite">Job Apply<br /></h5>
                     </div>
                   </div>
                 </div>
